<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.ulusofona.ecati.deisi.licenciatura.cm1920.grupo2.ui.fragments.ContactsFragment"
    android:orientation="vertical"
    >

        <ScrollView
            android:layout_weight="9"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="0dp">
                <TextView
                    android:id="@+id/loja_saldanha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textSize="20sp"
                    android:textColor="@color/textTitleLight"
                    android:text="@string/loja_saldanha"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/loja_saldanha_endereco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/textLight"
                    android:text="@string/mercado_31"
                    android:onClick="onClickLojaSaldanha"
                    />
                <TextView
                    android:id="@+id/loja_saldanha_horario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/textTitleLight"
                    android:text="@string/horario_1"/>

                <TextView
                    android:id="@+id/loja_laranjeiras"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textSize="20sp"
                    android:textColor="@color/textTitleLight"
                    android:text="@string/loja_laranjeiras"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/loja_laranjeiras_endereco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/textLight"
                    android:text="@string/rua_abranches"
                    android:onClick="onClickLojaLaranjeiras"
                    />
                <TextView
                    android:id="@+id/loja_laranjeiras_horario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/textTitleLight"
                    android:text="@string/horario_2"/>
                <TextView
                    android:id="@+id/loja_laranjeiras_horario1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/textTitleLight"
                    android:text="@string/horario_2_1"/>

                <TextView
                    android:id="@+id/loja_lisboa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textSize="20sp"
                    android:textColor="@color/textTitleLight"
                    android:text="@string/edificio_central"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/loja_lisboa_endereco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/campo_grande_25"
                    android:onClick="onClickLojaLisboa"
                    android:textColor="@color/textLight"
                    android:gravity="start"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/loja_lisboa_horario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/textTitleLight"
                    android:text="@string/horario_3"/>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
