<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.ulusofona.ecati.deisi.licenciatura.cm1920.grupo2.ui.fragments.ContactosGeraisFragment"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        >


        <ScrollView
            android:layout_weight="9"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="0dp">
                <TextView
                    android:id="@+id/telefone_gerais"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textSize="20sp"
                    android:textColor="@color/textTitleLight"
                    android:text="@string/telefone"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/phone_contactos_gerais"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="20sp"
                    android:gravity="start"
                    android:textColor="@color/textLight"
                    android:onClick="onClickPhoneGeral"
                    android:text="@string/btn_add_contact_geral"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored" />

                <TextView
                    android:id="@+id/fax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textSize="20sp"
                    android:textColor="@color/textTitleLight"
                    android:text="@string/fax"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/fax1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/textTitleLight"
                    android:text="217813699"
                    />
                <TextView
                    android:id="@+id/horario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textSize="20sp"
                    android:textColor="@color/textTitleLight"
                    android:text="@string/horario"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/horario1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/textTitleLight"
                    android:text="@string/horario_geral"
                    />
                <TextView
                    android:id="@+id/horario2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/textTitleLight"
                    android:text="@string/horario_2_1"
                    />
                <TextView
                    android:id="@+id/horario3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/textTitleLight"
                    android:text="@string/area_reservada_text"
                    />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</LinearLayout>