<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.ulusofona.ecati.deisi.licenciatura.cm1920.grupo2.ui.fragments.ContactosBlockVehiclesFragment"
    android:orientation="vertical"
    >

        <ScrollView
            android:layout_weight="8"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="0dp">

                <TextView
                    android:id="@+id/telefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textSize="20sp"
                    android:textColor="@color/textTitleLight"
                    android:text="@string/telefone"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/phone_bloqueio_veiculo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:onClick="onClickPhone"
                    android:textColor="@color/textLight"
                    android:gravity="start"
                    android:textSize="20sp"
                    android:text="@string/btn_add_contact_block"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

                <TextView
                    android:id="@+id/horario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textSize="20sp"
                    android:textColor="@color/textTitleLight"
                    android:text="@string/horario"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/horario_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/textTitleLight"
                    android:text="@string/horario_bloqueio"
                    />
            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="0dp">


            <TextView
                android:id="@+id/veiculo_contacto_bloqueado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verificar_bloqueio"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/textLight"
                android:layout_gravity="center"
                android:gravity="center"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="5dp"
                android:onClick="onClickBloqueado"
                />

        </LinearLayout>

        </ScrollView>


    </LinearLayout>
