<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/filtrosLight">


    <TextView
        android:id="@+id/nome_parque_popup_filtros"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="16dp"
        android:text="@string/filtros"
        android:textColor="@color/textTitleLight"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tipo_parque"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/tipo_de_parque_parque"
        android:textColor="@color/textTitleLight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome_parque_popup_filtros" />

    <Spinner
        android:id="@+id/drop_down_tipo_parque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/textTitleLight"
        android:layout_marginTop="10dp"
        android:drawSelectorOnTop="true"
        app:layout_constraintEnd_toEndOf="@+id/drop_down_estado_parque"
        app:layout_constraintStart_toStartOf="@+id/drop_down_estado_parque"
        app:layout_constraintTop_toBottomOf="@+id/tipo_parque" />

    <TextView
        android:id="@+id/estado_parque"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/estado_parque"
        android:textColor="@color/textTitleLight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drop_down_tipo_parque" />

    <Spinner
        android:id="@+id/drop_down_estado_parque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/textTitleLight"
        android:drawSelectorOnTop="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estado_parque" />

    <TextView
        android:id="@+id/distancia_parque"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/distancia_parque"
        android:textColor="@color/textTitleLight"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drop_down_estado_parque" />

    <Button
        android:id="@+id/button_filtrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:drawableStart="@drawable/filter_white"
        android:elevation="6dp"
        android:padding="10dp"
        android:layout_marginTop="16dp"

        android:text="@string/filtrar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/info_shake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seek_bar" />


    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="200"
        android:layout_marginTop="16dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        app:layout_constraintTop_toBottomOf="@+id/distancia_parque"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/info_seek_bar"
        android:text="@string/todos_tipos_parques"
        android:textColor="@color/textTitleLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="8dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/seek_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_filtrar"
        app:layout_constraintTop_toBottomOf="@+id/drop_down_estado_parque" />

    <TextView
        android:id="@+id/info_shake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/ic_info_24dp"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:text="@string/abane_para_restaurar_os_filtros"
        android:textColor="@color/textTitleLight"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_filtrar" />



</androidx.constraintlayout.widget.ConstraintLayout>